--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                             </div>
                         </div>  
                     </div>
-                    <div class="mb-12 lg:mb-16" data-aos="fade-up" data-aos-duration="1000">
+                    <!-- <div class="mb-12 lg:mb-16" data-aos="fade-up" data-aos-duration="1000">
                         <div class="relative flex flex-col mt-2 text-gray-700 bg-white dark:bg-zinc-800 shadow-md bg-clip-border rounded-xl w-[20rem] lg:w-[450px] px-4">
                             <a href="https://naelyo.github.io/Rak-buku/" target="_blank">
                                 <div
@@ -265,7 +265,7 @@
                                 <i class='bx bxl-javascript bx-md hover:text-javascript transition-all duration-300 cursor-pointer'></i>
                             </div>
                         </div>  
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
