--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 class="relative h-full -mt-6 overflow-hidden shadow-lg bg-clip-border rounded-xl bg-blue-gray-500 shadow-blue-gray-500/40 cursor-pointer transition-all duration-700 hover:scale-[.98] group">
                                 <img
                                   src="src/img/portfolio/port-1.png"
-                                  alt="card-image" class="portfolio-image group-hover:scale-110 transition-all duration-700">
+                                  alt="card-image" class="group-hover:scale-110 transition-all duration-700">
                               </div>
                             </a>
                             <div class="p-4">
@@ -182,7 +182,7 @@
                                 class="relative h-full -mt-6 overflow-hidden shadow-lg bg-clip-border rounded-xl bg-blue-gray-500 shadow-blue-gray-500/40 cursor-pointer transition-all duration-700 hover:scale-[.98] group">
                                 <img
                                   src="src/img/portfolio/port-2.png"
-                                  alt="card-image" class="portfolio-image group-hover:scale-110 transition-all duration-700">
+                                  alt="card-image" class="group-hover:scale-110 transition-all duration-700">
                               </div>
                             </a>
                             <div class="p-4">
@@ -205,7 +205,7 @@
                                 class="relative h-full -mt-6 overflow-hidden shadow-lg bg-clip-border rounded-xl bg-blue-gray-500 shadow-blue-gray-500/40 cursor-pointer transition-all duration-700 hover:scale-[.98] group">
                                 <img
                                   src="src/img/portfolio/port-3.png"
-                                  alt="card-image" class="portfolio-image group-hover:scale-110 transition-all duration-700">
+                                  alt="card-image" class="group-hover:scale-110 transition-all duration-700">
                               </div>
                             </a>
                             <div class="p-4">
@@ -228,7 +228,7 @@
                                 class="relative h-full -mt-6 overflow-hidden shadow-lg bg-clip-border rounded-xl bg-blue-gray-500 shadow-blue-gray-500/40 cursor-pointer transition-all duration-700 hover:scale-[.98] group">
                                 <img
                                   src="src/img/portfolio/port-4.png"
-                                  alt="card-image" class="portfolio-image group-hover:scale-110 transition-all duration-700">
+                                  alt="card-image" class="group-hover:scale-110 transition-all duration-700">
                               </div>
                             </a>
                             <div class="p-4">
