--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     </div>
                     <div class="mb-12 lg:mb-16" data-aos="fade-up" data-aos-duration="1000">
                         <div class="relative flex flex-col mt-2 text-gray-700 bg-white dark:bg-zinc-800 shadow-md bg-clip-border rounded-xl w-[20rem] lg:w-[450px] px-4">
-                            <a href="https://github.com/Alif661/Portofolio-Alif" target="_blank">
+                            <a href="https://alif661.github.io/Portofolio-Alif" target="_blank">
                                 <div
                                 class="relative h-full -mt-6 overflow-hidden shadow-lg bg-clip-border rounded-xl bg-blue-gray-500 shadow-blue-gray-500/40 cursor-pointer transition-all duration-700 hover:scale-[.98] group">
                                 <img
