--- a/index.html
+++ b/index.html
@@ -238,8 +238,11 @@
                               </p>
                             </div>
                             <div class="px-3 mt-1 pb-4 dark:text-white">
-                                <i class='bx bxl-github bx-md hover:text-github transition-all duration-300 cursor-pointer'></i>
+                                <i class='bx bxl-html5 bx-md hover:text-html transition-all duration-300 cursor-pointer'></i>  
+                                <i class='bx bxl-css3 bx-md hover:text-css transition-all duration-300 cursor-pointer'></i>  
+                                <i class='bx bxl-bootstrap bx-md hover:text-bootstrap transition-all duration-300 cursor-pointer'></i>
                                 <i class='bx bxl-javascript bx-md hover:text-javascript transition-all duration-300 cursor-pointer'></i>
+                                <i class='bx bxl-jquery bx-md hover:text-jquery transition-all duration-300 cursor-pointer'></i>
                             </div>
                         </div>  
                     </div>
