--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                         <li class="mb-10 ms-4" data-aos="fade-right" data-aos-duration="1000">
                             <div class="absolute w-3 h-3 bg-primary rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900">
                             </div>
-                            <time class="mb-2 text-[12px] lg:text-[14px] font-normal leading-none text-white bg-amber-400 rounded-full px-2 py-[1px] border border-amber-600">Juli 2021 - Mei 2024</time>
+                            <time class="mb-2 text-[12px] lg:text-[14px] font-normal leading-none text-white bg-amber-400 rounded-full px-2 py-[1px] border border-amber-600">2018 - 2021</time>
                             <h3 class="text-lg lg:text-[20px] mb-1 mt-1 font-bold text-dark dark:text-white">SMKN 21 JAKARTA</h3>
                             <ol class="text-[14px] lg:text-[16px] text-secondary dark:text-slate-400 list-disc ms-4">
                                 <li>Computer</li>
@@ -309,7 +309,7 @@
                         <li class="mb-10 ms-4" data-aos="fade-right" data-aos-duration="1000">
                             <div class="absolute w-3 h-3 bg-primary rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900">
                             </div>
-                            <time class="mb-2 text-[12px] lg:text-[14px] font-normal leading-none text-white bg-amber-400 rounded-full px-2 py-[1px] border border-amber-600">Maret 2024 - Juni 2024</time>
+                            <time class="mb-2 text-[12px] lg:text-[14px] font-normal leading-none text-white bg-amber-400 rounded-full px-2 py-[1px] border border-amber-600">Januari - April 2020</time>
                             <h3 class="text-lg lg:text-[20px] mt-1 font-bold text-dark dark:text-white">Magang Kementerian Perdagangan</h3>
                             <h4 class="text-[12px] lg:text-[14px] mb-1 font-bold text-dark dark:text-white">Front End Web Development</h4>
                             <ol class="text-[14px] lg:text-[16px] text-secondary dark:text-slate-400 list-disc ms-4">
@@ -321,7 +321,7 @@
                         <li class="mb-10 ms-4" data-aos="fade-right" data-aos-duration="1000">
                             <div class="absolute w-3 h-3 bg-primary rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900">
                             </div>
-                            <time class="mb-2 text-[12px] lg:text-[14px] font-normal leading-none text-white bg-amber-400 rounded-full px-2 py-[1px] border border-amber-600">Maret 2024 - Sekarang</time>
+                            <time class="mb-2 text-[12px] lg:text-[14px] font-normal leading-none text-white bg-amber-400 rounded-full px-2 py-[1px] border border-amber-600">27 Jul 2022</time>
                             <h3 class="text-lg lg:text-[20px] mb-1 mt-1 font-bold text-dark dark:text-white">Sertifikasi Python</h3>
                             <h4 class="text-[12px] lg:text-[14px] mb-1 font-bold text-dark dark:text-white">Python Development</h4>
                             <ol class="text-[14px] lg:text-[16px] text-secondary dark:text-slate-400 list-disc ms-4">
@@ -335,7 +335,7 @@
                         <li class="mb-10 ms-4" data-aos="fade-right" data-aos-duration="1000">
                             <div class="absolute w-3 h-3 bg-primary rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900">
                             </div>
-                            <time class="mb-2 text-[12px] lg:text-[14px] font-normal leading-none text-white bg-amber-400 rounded-full px-2 py-[1px] border border-amber-600">Maret 2023 - Juni 2023</time>
+                            <time class="mb-2 text-[12px] lg:text-[14px] font-normal leading-none text-white bg-amber-400 rounded-full px-2 py-[1px] border border-amber-600">21 Dec 2019</time>
                             <h3 class="text-lg lg:text-[20px] mb-1 mt-1 font-bold text-dark dark:text-white">Sertifikasi Klaster Pemrograman Dasar</h3>
                             <h4 class="text-[12px] lg:text-[14px] mb-1 font-bold text-dark dark:text-white">Programming</h4>
                             <ol class="text-[14px] lg:text-[16px] text-secondary dark:text-slate-400 list-disc ms-4">
@@ -348,7 +348,7 @@
                         <li class="mb-10 ms-4" data-aos="fade-right" data-aos-duration="1000"></li>
                             <div class="absolute w-3 h-3 bg-primary rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900">
                             </div>
-                            <time class="mb-2 text-[12px] lg:text-[14px] font-normal leading-none text-white bg-amber-400 rounded-full px-2 py-[1px] border border-amber-600">Maret 2023 - Juni 2023</time>
+                            <time class="mb-2 text-[12px] lg:text-[14px] font-normal leading-none text-white bg-amber-400 rounded-full px-2 py-[1px] border border-amber-600">2 Aug 2021</time>
                             <h3 class="text-lg lg:text-[20px] mb-1 mt-1 font-bold text-dark dark:text-white">Sertifikasi Pemrograman Komputer</h3>
                             <h4 class="text-[12px] lg:text-[14px] mb-1 font-bold text-dark dark:text-white">Programming</h4>
                             <ol class="text-[14px] lg:text-[16px] text-secondary dark:text-slate-400 list-disc ms-4">
@@ -361,7 +361,7 @@
                         <li class="mb-10 ms-4" data-aos="fade-right" data-aos-duration="1000"></li>
                             <div class="absolute w-3 h-3 bg-primary rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900">
                             </div>
-                            <time class="mb-2 text-[12px] lg:text-[14px] font-normal leading-none text-white bg-amber-400 rounded-full px-2 py-[1px] border border-amber-600">Maret 2023 - Juni 2023</time>
+                            <time class="mb-2 text-[12px] lg:text-[14px] font-normal leading-none text-white bg-amber-400 rounded-full px-2 py-[1px] border border-amber-600">21 Jan 2023</time>
                             <h3 class="text-lg lg:text-[20px] mb-1 mt-1 font-bold text-dark dark:text-white">Sertifikasi Database System</h3>
                             <h4 class="text-[12px] lg:text-[14px] mb-1 font-bold text-dark dark:text-white">Database System</h4>
                             <ol class="text-[14px] lg:text-[16px] text-secondary dark:text-slate-400 list-disc ms-4">
