--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <div class="w-full px-4 flex flex-wrap justify-center lg:px-0">
                     <div class="mb-12 lg:mb-16 lg:w-[40%]" data-aos="fade-up" data-aos-duration="1000">
                         <div class="relative flex flex-col mt-2 text-gray-700 bg-white dark:bg-zinc-800 shadow-md bg-clip-border rounded-xl w-[20rem] lg:w-[450px] px-4">
-                            <a href="https://naelyo.github.io/My-Portfolio/" target="_blank">
+                            <a href="" target="_blank">
                                 <div
                                 class="relative h-full -mt-6 overflow-hidden shadow-lg bg-clip-border rounded-xl bg-blue-gray-500 shadow-blue-gray-500/40 cursor-pointer transition-all duration-700 hover:scale-[.98] group">
                                 <img
@@ -177,7 +177,7 @@
                     </div>
                     <div class="mb-12 lg:mb-16" data-aos="fade-up" data-aos-duration="1000">
                         <div class="relative flex flex-col mt-2 text-gray-700 bg-white dark:bg-zinc-800 shadow-md bg-clip-border rounded-xl w-[20rem] lg:w-[450px] px-4">
-                            <a href="https://naelyo.github.io/CSS-Portfolio/" target="">
+                            <a href="" target="">
                                 <div
                                 class="relative h-full -mt-6 overflow-hidden shadow-lg bg-clip-border rounded-xl bg-blue-gray-500 shadow-blue-gray-500/40 cursor-pointer transition-all duration-700 hover:scale-[.98] group">
                                 <img
@@ -200,7 +200,7 @@
                     </div>
                     <div class="mb-12 lg:mb-16 lg:w-[40%]" data-aos="fade-up" data-aos-duration="1000">
                         <div class="relative flex flex-col mt-2 text-gray-700 bg-white dark:bg-zinc-800 shadow-md bg-clip-border rounded-xl w-[20rem] lg:w-[450px] px-4">
-                            <a href="https://naelyo.github.io/Menyala/" target="_blank">
+                            <a href="" target="_blank">
                                 <div
                                 class="relative h-full -mt-6 overflow-hidden shadow-lg bg-clip-border rounded-xl bg-blue-gray-500 shadow-blue-gray-500/40 cursor-pointer transition-all duration-700 hover:scale-[.98] group">
                                 <img
@@ -217,6 +217,7 @@
                             <div class="px-3 mt-1 pb-4 dark:text-white">
                                 <i class='bx bxl-html5 bx-md hover:text-html transition-all duration-300 cursor-pointer'></i>  
                                 <i class='bx bxl-css3 bx-md hover:text-css transition-all duration-300 cursor-pointer'></i>
+                                <i class='bx bxl-ci3 bx-md hover:text-css transition-all duration-300 cursor-pointer'></i>
                                 <i class='bx bxl-javascript bx-md hover:text-javascript transition-all duration-300 cursor-pointer'></i>
                             </div>
                         </div>  
@@ -479,7 +480,7 @@
                                         <a class="text-base leading-6 hover:text-primary dark:text-secondary dark:hover:text-primary" href="#about">Tentang Saya</a>
                                     </li>
                                     <li>
-                                        <a class="text-base leading-6 hover:text-primary dark:text-secondary dark:hover:text-primary" href="#portfolio">Portfolio</a>
+                                        <a class="text-base leading-6 hover:text-primary dark:text-secondary dark:hover:text-primary" href="#portfolio">Portofolio</a>
                                     </li>
                                     <li>
                                         <a class="text-base leading-6 hover:text-primary dark:text-secondary dark:hover:text-primary" href="#resume">Resume</a>
