--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                             </div>
                         </div>
                       
-                        <form class="space-y-4">
+                        <!-- <form class="space-y-4">
                             <input type='text' placeholder='Nama'
                                 class="w-full rounded-md py-2.5 px-4 border text-sm outline-primary dark:outline-dark" />
                             <input type='email' placeholder='Email'
@@ -428,7 +428,7 @@
                                 class="w-full rounded-md px-4 border text-sm pt-2.5 outline-primary dark:outline-dark"></textarea>
                             <button type='button'
                                 class="text-white bg-primary hover:opacity-90 transition-all ease-in-out duration-300 font-semibold rounded-md text-sm px-4 py-2.5 w-full">Kirim</button>
-                        </form>
+                        </form> -->
                     </div>
                 </div>
             </div>
