--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
                                 class="text-white bg-primary hover:opacity-90 transition-all ease-in-out duration-300 font-semibold rounded-md text-sm px-4 py-2.5 w-full">Kirim</button>
                         </form> -->
                     </div>
-                </div>
-            </div>
+                <!-- </div>
+            </div> -->
         </section>
     <!-- Contact Section End -->
 
